[metadata]
name = koradserial-mqtt
author = Ondřej Sluka
author_email = ondras12345@gmail.com
description = MQTT control for KORAD KA3005P power supply
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ondras12345/koradserial-mqtt
project_urls =
    Bug Tracker = https://github.com/ondras12345/koradserial-mqtt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    pyserial
    paho-mqtt
scripts = koradserial_mqtt.py

[flake8]
exclude =
    .git
    __pycache__
    .venv
    venv
    build
